--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div>测试</div>
-  <div type="h1">这是一个梗， 请不要滥用它</div>
-  <div type="strong">王院长温馨提示</div>
+  <h1>这是一个梗， 请不要滥用它</h1>
+  <strong>王院长温馨提示</strong>
 </body>
 </html>
