--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<title>北京仁慈医院官方网站！</title>
 </head>
 <body>
-  <div margin-left:50px>测试</div>
-  <h1 margin-left:50px>这是一个梗， 请不要滥用它</h1>
-  <strong margin-left:50px>王院长温馨提示</strong>
+  <div>测试</div>
+  <h1>这是一个梗， 请不要滥用它</h1>
+  <strong>王院长温馨提示</strong>
 </body>
 </html>
