--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 	<div id="blog">
 		<h2 class="center"><i class="fa fa-newspaper-o"></i>&nbsp;我院风采</h2>
 		</div>
+		</div>
 	
 	<div id="side">
 		<div class="rightdiv">
