--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 			<i class="fa fa-envelope-o"></i> 
 			</div>
 		</div>
-		<div class="rightdiv">
-			<!--<h2><i class="fa fa-calendar-check-o"></i>&nbsp;打卡区</h2>
+		<!--<div class="rightdiv">
+			<h2><i class="fa fa-calendar-check-o"></i>&nbsp;打卡区</h2>
 			<div style="font-size:17px;">
 				今日我前方巨佬的 RP：<strong id="rp">你不打卡我肿么告诉你 QaQ</strong>
 			</div>
