--- a/404.html
+++ b/404.html
@@ -16,14 +16,14 @@
 				<div style="width:60%;">
 					<br/>
 					<br/>
-					<strong>如果你是自己来到这的...</strong>
+					<strong>Are You OK???</strong>
 					<br/>
-					<span>请检查网址拼写是否正确。</span>
+					<span>我们强烈推荐您到本院精神科就诊</span>
 					<br/>
 					<br/>
-					<strong>如果你是点击超链接来到这的...</strong>
+					<strong>王院长专业团队，研究精神医学二十年！</strong>
 					<br/>
-					<span>此超链接存在问题。请设法告知链接提供者这个问题。</span>
+					<span>点击<a style="color:white;">此处</a>预约就诊！</span>
 
 				</div>
 		</div>
